fixed images not showing up

--- a/appointmentsStyle.css
+++ b/appointmentsStyle.css
@@ -16,7 +16,7 @@
   }
   
   body {
-      background-image: url("/images/calendar_background.png");
+      background-image: url("images/calendar_background.png");
       background-size: cover;
       background-repeat: no-repeat;
       font-family: 'Roboto', sans-serif;
@@ -276,7 +276,7 @@
 footer {
     width: 100%;
     height: 80vh;
-    background-image: url(/images/footer_background.png);
+    background-image: url(images/footer_background.png);
     background-size: cover;
     display: flex;
     align-items: center;
