--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 #landing {
     width: 100%;
     height: 90vh;
-    background-image: url(/images/nails_banner.png);
+    background-image: url(images/nails_banner.png);
     background-size: cover;
 }
 
@@ -166,7 +166,7 @@
 footer {
     width: 100%;
     height: 80vh;
-    background-image: url(/images/footer_background.png);
+    background-image: url(images/footer_background.png);
     background-size: cover;
     display: flex;
     align-items: center;
